# TrainningTests

./: README.md
CMake_tests/: CMakeLists.txt  exec
CMake_tests/hw/: div.cpp  div.hpp  multip.cpp
CMake_tests/inc/: op.hpp
CMake_tests/src/: main.cpp  sum.cpp
